# Automated-Refactoring-Tool

./: AutoRefactoringTool_ScopingDocument.docx  pyproject.toml  ~$toRefactoringTool_ScopingDocument.docx
src/: code_smells.py  main.py
src/code_metrics/: cls.py  code_metrics.py  cyclomatic.py  func.py  halstead.py
src/detectors/: detect_long_function.py  long_function_detector.py  wildcard_import_detector.py  with_open_detector.py
src/refactorers/: refactor_long_function.py
tests/: long_functions.py  test_cyclomatic.py  test_halstead.py  test_long_function_detector.py  test_long_function_refactorer.py  test_main.py  tests_main.py
