[project]
name = "automated-refactoring-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astmonkey>=0.3.6",
    "astor>=0.8.1",
    "astpretty>=3.0.0",
    "pytest>=8.3.5",
    "radon>=2.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "radon>=2.0.0"
]

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = '.'
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
